--- a/index.html
+++ b/index.html
@@ -4,29 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>WEB记事本</title>
-	<!-- build:css bundle.min.css -->
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/dlg-common.css">
-	
-	<link rel="stylesheet" href="arr/list/list.css">
-	<link rel="stylesheet" href="arr/menubar/menubar.css">
-	<link rel="stylesheet" href="arr/editor/editor.css">
-	<link rel="stylesheet" href="arr/dlg-font/dlg-font.css">
+	<!-- build:css note.min.css -->
+	<link rel="stylesheet" href="css/list.css">
+	<link rel="stylesheet" href="css/menubar.css">
+	<link rel="stylesheet" href="css/editor.css">
+	<link rel="stylesheet" href="css/font.css">
 	<!-- endbuild -->
-	<link rel="icon" href="images/notepad-icon-32.png" sizes="32x32" type="image/png">
+	<link rel="icon" href="images/node.png" sizes="32x32" type="image/png">
 </head>
 <body>
 	<div class="notepad-app"></div>
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<!-- build:js bundle.min.js -->
-<script src="js/app.js"></script>
+<!-- build:js note.min.js -->
 <script src="js/menu.js"></script>
-
-<script src="arr/menubar/menubar.js"></script>
-<script src="arr/editor/editor.js"></script>
-<script src="arr/list/list.js"></script>
-<script src="arr/dlg-font/dlg-font.js"></script>
+<script src="js/menubar.js"></script>
+<script src="js/editor.js"></script>
+<script src="js/list.js"></script>
+<script src="js/font.js"></script>
 <!-- endbuild -->
 </html>
