--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>WEB记事本</title>
-	<!-- build:css note.min.css -->
+	<!-- build:css bundle.min.css -->
 	<link rel="stylesheet" href="css/list.css">
-	<link rel="stylesheet" href="css/menubar.css">
+	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/editor.css">
 	<link rel="stylesheet" href="css/font.css">
 	<!-- endbuild -->
@@ -17,9 +17,8 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<!-- build:js note.min.js -->
+<!-- build:js bundle.min.js -->
 <script src="js/menu.js"></script>
-<script src="js/menubar.js"></script>
 <script src="js/editor.js"></script>
 <script src="js/list.js"></script>
 <script src="js/font.js"></script>
